--- a/lib_common/src/main/res/values/styles.xml
+++ b/lib_common/src/main/res/values/styles.xml
@@ -16,4 +16,26 @@
         <item name="android:textSize">@dimen/common_text_topic</item>
         <item name="android:textColor">@color/common_white</item>
     </style>
+
+    <!-- sweet alert -->
+    <style name="common_alert_dialog" parent="android:Theme.Dialog">
+        common_dialog_blue_button
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowBackground">@color/common_float_transparent</item>
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:backgroundDimAmount">0.4</item>
+    </style>
+
+    <style name="common_dialog_blue_button" parent="android:Widget.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">31dp</item>
+        <item name="android:background">@drawable/common_blue_btn_background</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:paddingLeft">21dp</item>
+        <item name="android:paddingRight">21dp</item>
+        <item name="android:textColor">@color/common_button_text_color</item>
+    </style>
 </resources>
