增加沉浸式状态栏

--- a/lib_common/src/main/res/layout/common_toolbar.xml
+++ b/lib_common/src/main/res/layout/common_toolbar.xml
@@ -7,8 +7,8 @@
     style="@style/common_toolbar_style"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/common_toolbar_height"
-    android:background="@color/common_colorPrimary"
+    android:layout_height="match_parent"
+    android:background="@color/common_theme"
     android:minHeight="?attr/actionBarSize"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
