--- a/lib_common/src/main/res/values/colors.xml
+++ b/lib_common/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="common_theme">#DC143C</color>
+    <color name="common_theme">#242424</color>
     <color name="common_white">#ffffff</color>
     <color name="common_translate">#00000000</color>
 
