增加item滑动控件，自定义分割线

--- a/lib_common/src/main/res/values/attrs.xml
+++ b/lib_common/src/main/res/values/attrs.xml
@@ -30,4 +30,13 @@
     <declare-styleable name="common_ToolbarControl">
         <attr name="common_titleText" format="string"/>
     </declare-styleable>
+
+    <declare-styleable name="common_EasySwipeMenuLayout">
+        <attr name="common_leftMenuView" format="reference" />
+        <attr name="common_rightMenuView" format="reference" />
+        <attr name="common_contentView" format="reference" />
+        <attr name="common_canRightSwipe" format="boolean" />
+        <attr name="common_canLeftSwipe" format="boolean" />
+        <attr name="common_fraction" format="float" />
+    </declare-styleable>
 </resources>
