--- a/lib_common/src/main/res/layout/common_alert_dialog.xml
+++ b/lib_common/src/main/res/layout/common_alert_dialog.xml
@@ -14,7 +14,7 @@
         android:layout_width="53dp"
         android:layout_height="53dp"
         android:layout_marginTop="5dp"
-        android:contentDescription="@string/app_name"
+        android:contentDescription="@string/common_lib_name"
         android:visibility="gone"
         android:scaleType="fitCenter" />
 
@@ -33,7 +33,7 @@
             android:id="@+id/error_x"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@string/app_name"
+            android:contentDescription="@string/common_lib_name"
             android:src="@drawable/common_error_center_x"
             android:scaleType="center" />
 
@@ -56,15 +56,15 @@
             android:layout_width="35dp"
             android:layout_height="80dp"
             android:layout_marginTop="-13dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:background="@android:color/white" />
 
         <View
             android:id="@+id/mask_left"
             android:layout_width="21dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="-3dp"
-            android:layout_gravity="left"
+            android:layout_marginStart="-3dp"
+            android:layout_gravity="start"
             android:background="@android:color/white" />
 
         <View
@@ -94,7 +94,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:contentDescription="@string/app_name"
+            android:contentDescription="@string/common_lib_name"
             android:src="@drawable/common_warning_sigh"
             android:scaleType="center" />
     </FrameLayout>
@@ -145,7 +145,7 @@
             android:id="@+id/cancel_button"
             style="@style/common_dialog_blue_button"
             android:background="@drawable/common_gray_btn_background"
-            android:layout_marginRight="@dimen/common_alert_spacing"
+            android:layout_marginEnd="@dimen/common_alert_spacing"
             android:visibility="gone"
             android:text="@string/common_cancel" />
 
